--- a/Sarkadi Kristóf Stefán/testeles/Network_Utility/Network_Utility.TEST/Network_Utility.TEST.csproj
+++ b/Sarkadi Kristóf Stefán/testeles/Network_Utility/Network_Utility.TEST/Network_Utility.TEST.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Network_Utility\Network_Utility.csproj" />
+  </ItemGroup>
+
 </Project>
