--- a/Takács Péter/c#/OOP2/OOP2/OOP2.csproj
+++ b/Takács Péter/c#/OOP2/OOP2/OOP2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EF0E43B1-52AF-45EB-8A93-3122CB34DB1E}</ProjectGuid>
+    <ProjectGuid>{D3DA6A90-8061-48BF-A8BE-0A784DCC11E3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_00P1</RootNamespace>
-    <AssemblyName>00P1</AssemblyName>
+    <RootNamespace>OOP2</RootNamespace>
+    <AssemblyName>OOP2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
