--- a/Roben Rómeó/c#/BukkMarathon2019/BukkMarathon2019/BukkMarathon2019.csproj
+++ b/Roben Rómeó/c#/BukkMarathon2019/BukkMarathon2019/BukkMarathon2019.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1C674854-DBEF-4A3A-845D-A6CFB6F70BD6}</ProjectGuid>
+    <ProjectGuid>{AB2B118F-69B8-4B33-9C0A-67C984E582C9}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>bukkbalaton2019</RootNamespace>
-    <AssemblyName>bukkbalaton2019</AssemblyName>
+    <RootNamespace>BukkMarathon2019</RootNamespace>
+    <AssemblyName>BukkMarathon2019</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,10 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VersenyTav.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Versenyzo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
